--- a/source/template/pages/myworks.pug
+++ b/source/template/pages/myworks.pug
@@ -13,7 +13,7 @@ body
           a.in(href="#")
             i.fa.fa-linkedin(aria-hidden="true")
       .avatar-block
-        img.photo(src="#", alt="Logo")
+        img.photo(src="assets/img/fashmark-men-trends-nature.png", alt="Logo")
         p.name Александр Прикотов
         p.sitetitle Личный сайт веб-разработчика
       .box
@@ -34,7 +34,7 @@ body
             .presentation
               .presentation-inner
                 .big-demo
-                  img(src='assets/img/big_demo.png', alt='big demo')
+                  img(src='assets/img/big-demo.png', alt='big demo')
                 .small-demo
                   .small-demo-left
                     img.small-demo-pic(src='assets/img/slide_down.png', alt='small demo')
