blog and myworks pages

--- a/source/style/blog.css
+++ b/source/style/blog.css
@@ -5,14 +5,17 @@ body {
 
 .wrapper {
   background: url("../img/back.png") no-repeat;
-  background-size: 100% 522px;
+  background-size: 100% 480px;
   z-index: 10000; }
+
+.content {
+  margin-bottom: 200px; }
 
 .promo {
   color: white; }
   .promo .box {
     height: 120px;
-    margin: 0 auto 0 auto;
+    margin: -80px auto 0 auto;
     z-index: 10000; }
   .promo .triangle {
     fill: #faf8f0; }
@@ -61,12 +64,19 @@ body {
   .blog .blog-menu {
     vertical-align: top;
     display: inline-block;
-    width: 20%; }
+    width: 21%; }
+    .blog .blog-menu .blog-nav {
+      float: right; }
     .blog .blog-menu li {
-      list-style: none; }
+      list-style: none;
+      text-align: left;
+      border-right: 2px solid #a2be92; }
   .blog .blog-content {
-    width: 79%;
-    display: inline-block; }
+    width: 78%;
+    display: inline-block;
+    padding-left: 0; }
+    .blog .blog-content .blog-news {
+      margin-left: 120px; }
     .blog .blog-content li {
       list-style: none; }
       .blog .blog-content li h2 {
@@ -77,5 +87,55 @@ body {
         color: #a2be92; }
       .blog .blog-content li .blog-content-text {
         margin: 0; }
+
+.footer-template {
+  width: 100%;
+  height: 150px;
+  color: white;
+  background-color: rgba(54, 61, 64, 0.6);
+  margin-top: -150px; }
+  .footer-template .left-part,
+  .footer-template .right-part,
+  .footer-template .center-part {
+    width: 33.2%;
+    display: inline-block;
+    border-right: 1px solid grey;
+    box-sizing: border-box;
+    margin-left: -2px;
+    padding-left: 32px;
+    margin-top: 18px;
+    font-size: 16px;
+    line-height: 16px; }
+  .footer-template .center-part .nav-menu {
+    padding-left: 0; }
+  .footer-template .center-part .social-btns {
+    margin-bottom: 38px;
+    float: left; }
+    .footer-template .center-part .social-btns a {
+      margin-right: 20px; }
+      .footer-template .center-part .social-btns a i.fa-vk,
+      .footer-template .center-part .social-btns a i.fa-github-alt,
+      .footer-template .center-part .social-btns a i.fa-linkedin {
+        color: white;
+        font-size: 28px;
+        line-height: 28px; }
+  .footer-template .right-part {
+    border-right: none; }
+  .footer-template .nav-menu {
+    list-style: none; }
+    .footer-template .nav-menu li {
+      display: inline; }
+
+.copyright {
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  left: 0;
+  bottom: 0;
+  margin-top: -70px;
+  text-align: center;
+  background-color: rgba(98, 140, 83, 0.85);
+  line-height: 40px;
+  z-index: 10000; }
 
 /*# sourceMappingURL=blog.css.map */
