--- a/source/style/blog.scss
+++ b/source/style/blog.scss
@@ -7,16 +7,19 @@ body {
 
 .wrapper {
   background: url('../img/back.png') no-repeat;
-  background-size: 100% 522px;
+  background-size: 100% 480px;
   z-index: 10000;
 }
+
+.content {
+  margin-bottom:200px;}
 
 .promo {
   color: white;
 
   .box {
     height: 120px;
-    margin: 0 auto 0 auto;
+    margin: -80px auto 0 auto;
     z-index: 10000;
   }
 
@@ -84,21 +87,28 @@ body {
 .blog {
   background-color: rgb(250, 248, 240);
   height: 100%;
+
   .blog-menu {
    vertical-align: top;
-
     display: inline-block;
-    width: 20%;
+    width: 21%;
+    .blog-nav {
+      float: right;
+    }
     li {
       list-style: none;
-
+      text-align: left;
+      border-right: 2px solid rgb(162, 190, 146);
     }
   }
 
   .blog-content {
-    width: 79%;
+    width: 78%;
     display: inline-block;
-
+    padding-left:0;
+    .blog-news {
+      margin-left: 120px;
+    }
     li {
       list-style: none;
       h2 {
@@ -114,4 +124,71 @@ body {
       }
     }
   }
+}
+
+.footer-template {
+  width: 100%;
+  height: 150px;
+  color: white;
+  background-color: rgba(54, 61, 64, 0.6);
+  margin-top: -150px;
+
+  .left-part,
+  .right-part,
+  .center-part {
+    width: 33.2%;
+    display: inline-block;
+    border-right: 1px solid grey;
+    box-sizing: border-box;
+    margin-left: -2px;
+    padding-left: 32px;
+    margin-top: 18px;
+    font-size: 16px;
+    line-height: 16px;
+  }
+
+  .center-part {
+    .nav-menu {
+      padding-left: 0;
+    }
+    .social-btns {
+      margin-bottom: 38px;
+      float: left;
+
+      a {
+        margin-right: 20px;
+        i.fa-vk,
+        i.fa-github-alt,
+        i.fa-linkedin {
+          color: white;
+          font-size: 28px;
+          line-height: 28px;
+        }
+      }
+    }
+  }
+
+  .right-part {
+    border-right: none;
+  }
+
+  .nav-menu {
+    list-style: none;
+    li {
+      display: inline;
+    }
+  }
+}
+
+.copyright {
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  left: 0;
+  bottom: 0;
+  margin-top: -70px;
+  text-align: center;
+  background-color: rgba(98, 140, 83, 0.85);
+  line-height: 40px;
+  z-index: 10000;
 }
