--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -19,7 +19,7 @@ body
           a.in(href="#")
             i.fa.fa-linkedin(aria-hidden="true")
       .avatar-block
-        img.photo(src="#", alt="Logo")
+        img.photo(src="assets/img/fashmark-men-trends-nature.png", alt="Logo")
         h1.name Блог
           hr.horizontal-line
         p.sitetitle Статьи, которые я написал
@@ -54,3 +54,24 @@ body
               h2 Четвертая
               p.date 13 января 2013
               p.blog-content-text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti earum eius, harum ipsam itaque minus natus possimus provident recusandae repudiandae saepe sit velit voluptas voluptatibus? Aliquam atque doloribus exercitationem.
+    .footer-template
+      .left-part
+        p.i-did Это я сделал в рамках обучения в LoftSchool"
+      .center-part
+        ul.nav-menu
+          li Мои работы
+          li Обо мне
+          li Блог
+          li Авторизация
+        .social-btns
+          a.vk(href="#")
+            i.fa.fa-vk(aria-hidden="true")
+          a.git(href="#")
+            i.fa.fa-github-alt(aria-hidden="true")
+          a.in(href="#")
+            i.fa.fa-linkedin(aria-hidden="true")
+      .right-part
+        p.quote Lal lal la la la l alldlkjk dkdk ljljs sjhdshd
+          span
+            | - Who say
+    .copyright Привет
