--- a/source/style/myworks.scss
+++ b/source/style/myworks.scss
@@ -1,21 +1,24 @@
 
 body {
   height: 100%;
+  background: none;
+  margin: 0;
+}
 
+.wrapper {
+  background: url('../img/back.png') no-repeat;
+  background-size: 100% 470px;
+  z-index: 10000;
 }
 
 
-
-
 .promo {
-  background: url('../img/back.png');
-  background-repeat:  no-repeat;
-  background-size: 100% 500px;
   color: white;
 
   .box {
-    margin: 158px auto 25px auto;
-
+    height: 130px;
+    margin: 10px auto 40px auto;
+    z-index: 10000;
   }
 
   .triangle {
