--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -6,7 +6,8 @@ head
   link(href="assets/css/normalize.css", rel="stylesheet")
   link(href="assets/css/main.css", rel="stylesheet")
   link(href="assets/css/blog.css", rel="stylesheet")
-  link(href="assets/css/font-awesome.css", rel="stylesheet")
+  link(rel='stylesheet', href='../bower_components/font-awesome/css/font-awesome.css')
+
 body
   .wrapper
     .promo
