--- a/source/style/myworks.scss
+++ b/source/style/myworks.scss
@@ -25,6 +25,8 @@ body {
     fill: white;
   }
   .myworks-header {
+    padding-top: 35px;
+    padding-left: 30px;
     &:after {
       display: table;
       clear: both;
