--- a/source/template/includes/head.pug
+++ b/source/template/includes/head.pug
@@ -6,4 +6,4 @@ head
   link(href="assets/css/normalize.css", rel="stylesheet")
   link(href="assets/css/main.css", rel="stylesheet")
   link(href="assets/css/myworks.css", rel="stylesheet")
-  link(href="assets/css/font-awesome.css", rel="stylesheet")
+  link(rel='stylesheet', href='../bower_components/font-awesome/css/font-awesome.css')
