--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -6,7 +6,8 @@ head
   link(href="assets/css/normalize.css", rel="stylesheet")
   link(href="assets/css/main.css", rel="stylesheet")
   link(href="assets/css/register.css", rel="stylesheet")
-  link(href="assets/css/font-awesome-4.6.3/css/font-awesome.min.css", rel="stylesheet")
+  link(rel='stylesheet', href='../bower_components/font-awesome/css/font-awesome.css')
+
 body
   header
     a.autorize-btn(href="#") Авторизоваться
