--- a/source/template/pages/skills.pug
+++ b/source/template/pages/skills.pug
@@ -6,7 +6,7 @@ head
   link(href="assets/css/normalize.css", rel="stylesheet")
   link(href="assets/css/main.css", rel="stylesheet")
   link(href="assets/css/skills.css", rel="stylesheet")
-  link(href="assets/css/font-awesome.css", rel="stylesheet")
+  link(rel='stylesheet', href='../bower_components/font-awesome/css/font-awesome.css')
 body
   .wrapper
     .promo
@@ -58,7 +58,7 @@ body
                 svg.circle(width='120' height='120')
                   circle(transform='rotate(-90)', r='50', cx='-60', cy='60')
                   circle(transform='rotate(-90)', style='stroke-dasharray: 200px 314px;', r='50', cx='-60', cy='60')
-                span.circle-text JavaScript&JQuery
+                span.circle-text JavaScript & JQuery
           h3.skills-frontend Backend
           .skills-circles
             .circle-wrap
@@ -113,6 +113,5 @@ body
           span
             | - Who say
     .copyright Привет
-  <script type="text/javascript" src="./source/js/google_maps.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfRdSrcRsYDUhxGwIWIo_691ihwrHeRDs&callback=initMap">
 
