--- a/source/style/skills_content.css
+++ b/source/style/skills_content.css
@@ -1,57 +1,3 @@
-body {
-  background-size: 100% 500px; }
-
-.promo {
-  color: white; }
-  .promo .down-arrow {
-    display: block;
-    text-align: center;
-    margin: 0 auto; }
-  .promo .box {
-    margin: 158px auto 25px auto;
-    z-index: 10000;
-    height: 90px; }
-    .promo .box .triangle polygon {
-      fill: #ebefe2; }
-      .promo .box .triangle polygon:nth-child(2n) {
-        fill: #f4f5f0; }
-  .promo .myworks-header {
-    padding-top: 35px;
-    padding-left: 30px; }
-    .promo .myworks-header:after {
-      display: table;
-      clear: both;
-      content: ""; }
-    .promo .myworks-header .social-btns {
-      margin-bottom: 38px;
-      float: left; }
-      .promo .myworks-header .social-btns a {
-        margin-right: 20px; }
-        .promo .myworks-header .social-btns a i.fa-vk,
-        .promo .myworks-header .social-btns a i.fa-github-alt,
-        .promo .myworks-header .social-btns a i.fa-linkedin {
-          color: white;
-          font-size: 28px;
-          line-height: 28px; }
-  .promo .avatar-block {
-    text-align: center; }
-    .promo .avatar-block .photo {
-      border-radius: 50%;
-      width: 145px;
-      height: 145px;
-      margin-top: 40px;
-      margin-bottom: 15px; }
-    .promo .avatar-block .name {
-      font-size: 28px;
-      line-height: 28px;
-      margin-bottom: 10px;
-      margin-top: 0; }
-    .promo .avatar-block .sitetitle {
-      font-size: 16px;
-      line-height: 16px;
-      margin-top: 0;
-      margin-bottom: 30px; }
-
 .skills {
   width: 100%; }
   .skills:after {
@@ -189,55 +135,4 @@ body {
     .map .adress-form .fa-phone {
       color: #6c9c5a; }
 
-.footer-template {
-  width: 100%;
-  height: 150px;
-  color: white;
-  background-color: rgba(54, 61, 64, 0.6);
-  margin-top: -150px;
-  z-index: 10000; }
-  .footer-template .left-part,
-  .footer-template .right-part,
-  .footer-template .center-part {
-    width: 33.2%;
-    display: inline-block;
-    border-right: 1px solid grey;
-    box-sizing: border-box;
-    margin-left: -2px;
-    padding-left: 32px;
-    margin-top: 18px;
-    font-size: 16px;
-    line-height: 16px; }
-  .footer-template .center-part .nav-menu {
-    padding-left: 0; }
-  .footer-template .center-part .social-btns {
-    margin-bottom: 38px;
-    float: left; }
-    .footer-template .center-part .social-btns a {
-      margin-right: 20px; }
-      .footer-template .center-part .social-btns a i.fa-vk,
-      .footer-template .center-part .social-btns a i.fa-github-alt,
-      .footer-template .center-part .social-btns a i.fa-linkedin {
-        color: white;
-        font-size: 28px;
-        line-height: 28px; }
-  .footer-template .right-part {
-    border-right: none; }
-  .footer-template .nav-menu {
-    list-style: none; }
-    .footer-template .nav-menu li {
-      display: inline; }
-
-.copyright {
-  position: absolute;
-  width: 100%;
-  height: 40px;
-  left: 0;
-  bottom: 0;
-  margin-top: -70px;
-  text-align: center;
-  background-color: rgba(98, 140, 83, 0.85);
-  line-height: 40px;
-  z-index: 10000; }
-
-/*# sourceMappingURL=skills.css.map */
+/*# sourceMappingURL=skills_content.css.map */
