--- a/source/template/includes/footer.pug
+++ b/source/template/includes/footer.pug
@@ -1,1 +1,3 @@
 footer.copyright (с) Сделано с любовью
+script(src="assets/js/app.js")
+script(async, defer, src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBfRdSrcRsYDUhxGwIWIo_691ihwrHeRDs&callback=initMap')
