--- a/source/template/includes/head.pug
+++ b/source/template/includes/head.pug
@@ -5,5 +5,5 @@ head
   meta(name="viewport",content="width=device-width")
   link(href="assets/css/normalize.css", rel="stylesheet")
   link(href="assets/css/main.css", rel="stylesheet")
-  link(href="assets/css/myworks.css", rel="stylesheet")
   link(rel='stylesheet', href='../bower_components/font-awesome/css/font-awesome.css')
+  block link-css
